--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "mysql2": "^2.3.3",
     "node": "^19.3.0",
     "sequelize": "^6.28.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "^2.8.2"
   }
 }
